# shetkari

./: .gitignore  QUICKSTART.md  README.md  difference.txt  elevenlabs_demo.js  output.txt  package-lock.json  package.json  server.js  test-audio.ts  test.js
ai_analyst/: README.md  main.py  pyproject.toml
ai_analyst/analyst/: __init__.py  engine.py  mandi_engine.py  prompt_builder.py
ai_analyst/config/: __init__.py  settings.py
ai_analyst/examples/: __init__.py  use_case_a.py  use_case_b.py  use_case_c.py
ai_analyst/models/: __init__.py  inputs.py  outputs.py
ambuj_mandi/: .gitignore  EXAMPLES.md  SUMMARY.md  package.json  server.js
ambuj_mandi/config/: api.config.js
ambuj_mandi/controllers/: mandiController.js
ambuj_mandi/routes/: mandi.routes.js
api/: index.ts
api/entities/: users.ts
api/utils/: translate.ts  whatsapp.ts
data_sources/: README.md  main.py  pyproject.toml
data_sources/mandi/: __init__.py  comparison.py  config.py  location.py  service.py
data_sources/routers/: mandi.py  soil_health.py  weather.py
data_sources/soil_health/: __init__.py  html_extractor.py  html_scraper.py
data_sources/weather/: __init__.py  client.py  current.py  history.py  models.py
server/: package-lock.json  package.json  tsconfig.json
server/api/: index.ts
services/: comparisonService.js  locationService.js  mandiService.js
soil_health_scrapper/: main.py  pyproject.toml  response.html  response.json  successful_response.json  tested_numbers.txt
soil_health_scrapper/src/: phone_scraper.py
weather_api/: main.py  pyproject.toml
(+12 files in other folders)
